-
    New feature: File attachment links have a rel="nofollow" now.

    New feature: Ability to hook up pre- and post scripts that are
    called before and after issues are submitted.
    http://www.issuetrackerproduct.com/Documentation/How-Tos/pre-post-SubmitIssue

    Bug fixed: Confidential issues could be seen by logged in people
    by changing their email address to an email address of someone else.
    (Real#0696, thanks NiBar)

    Bug fixed: Keyboard shortcut for comparing issues changed from 'c'
    to 'g'+'d' since the 'c' cause interference with Ctrl-C for copying.
    (Real#0697, thanks Jesse Perry)

    New feature: Skipped notifications when not dispatching on submit.
    Means that if you let a cronjob send the notifications instead of
    immediately sending them, some notifications are cancelled if the
    people who are email have already followed up. (Real#0686)
    
    Bug fixed: rss.xml and rdf.xml weren't protected by the View
    permission. (Real#0695, thanks Jesse Perry)
    
    Bug fixed: Changed default encoding from "utf8" to "utf-8" to make
    sure older IEs gets it right.

    Bug fixed: Header in CSV file for "ID" replaced by "Issue ID"
    (Real#0687)

    Bug fixed: Clairvoyant AJAX checks' interval increases now slowly as
    the page gets older.
    
    Bug fixed: Issues were uncataloged twice when deleting causing a
    harmless extra message in the event log.
    
- 0.8.3

    Bug fixed: Clairvoyant javascript alert on followups would repeat
    the same message over and over (almost blinking).

    New feature: Name and email is saved in a cookie when working on a
    draft if the name/email isn't already set.

    Change: If in DEBUG mode (environment variable
    DEBUG_ISSUETRACKERPRODUCT) emails are printed to stdout
    
- 0.8.2

    Bug fixed: Error on duplicate in on second followups in issues.
    Real#0665 and Real#0666
    
- 0.8.1 

    Bug fixed: The clarvoyent AJAX feature would show if someone is